added google analytics

--- a/about-me.html
+++ b/about-me.html
@@ -13,6 +13,21 @@
     />
     <meta name="author" content="Michelle Salomon Simon" />
     <title>About Michy</title>
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+     <script
+     async
+     src="https://www.googletagmanager.com/gtag/js?id=UA-54516992-1"
+   ></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag() {
+       dataLayer.push(arguments);
+     }
+     gtag("js", new Date());
+
+     gtag("config", "UA-54516992-1");
+   </script>
+
   </head>
   <body>
     <header>
@@ -103,4 +118,4 @@
       /></a>
     </footer>
   </body>
-</html>
+</html
