--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" type="text/css" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Proza+Libre|Open+Sans"
+    />
+    <link rel="shortcut icon" href="favicon.ico" type="images/favicon.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -14,6 +19,20 @@
     />
     <meta name="author" content="Michelle Salomon Simon" />
     <title>Michy's Photography</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-54516992-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-54516992-1");
+    </script>
   </head>
   <body>
     <header>
