--- a/editing.html
+++ b/editing.html
@@ -4,15 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-    name="description"
-    content="Michelle Salomon Simon's photography gallery. Best tips how to tips for at home photo shoots."
-  />
-  <meta
-    name="keywords"
-    content="photos, how to photo shoot, editing, photoshoots, gallery, DIY, photography, exposure, aperture, sale, michy, michelle, michysal"
-  />
-  <meta name="author" content="Michelle Salomon Simon" />
+      name="description"
+      content="Michelle Salomon Simon's photography gallery. Best tips how to tips for at home photo shoots."
+    />
+    <meta
+      name="keywords"
+      content="photos, how to photo shoot, editing, photoshoots, gallery, DIY, photography, exposure, aperture, sale, michy, michelle, michysal"
+    />
+    <meta name="author" content="Michelle Salomon Simon" />
     <title>Editing</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-54516992-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-54516992-1");
+    </script>
   </head>
   <body>
     <header>
