--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -14,6 +14,20 @@
     />
     <meta name="author" content="Michelle Salomon Simon" />
     <title>The Gallery</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-54516992-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-54516992-1");
+    </script>
   </head>
   <body>
     <header>
