--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="index.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Proza+Libre|Open+Sans"
     />
-    <link rel="shortcut icon" href="favicon.ico" type="images/favicon.png" />
+    <link rel="stylesheet" type="text/css" href="styles/index.css" />
+
+    <link rel="icon" href="images/favicon.png" type="image/png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -36,7 +37,7 @@
   </head>
   <body>
     <header>
-      <div>
+      <div class="nav">
         <ul>
           <li>
             <a href="index.html">
