worked on nav, header, footer, rearranged css strategy

--- a/DIY-photo-shoots.html
+++ b/DIY-photo-shoots.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="stylesheet" type="text/css" href="styles/fundementals.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Proza+Libre|Open+Sans"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -30,11 +36,12 @@
   </head>
   <body>
     <header>
-      <div>
+      <div class="nav">
         <ul>
           <li>
             <a href="index.html">
               <img
+                class="logo"
                 src="images/logo.png"
                 alt="logo"
                 title="Michy's Photography Logo"
