--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="stylesheet" type="text/css" href="styles/fundementals.css" />
+    <link rel="stylesheet" type="text/css" href="styles/contact.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Proza+Libre|Open+Sans"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -30,11 +37,12 @@
   </head>
   <body>
     <header>
-      <div>
+      <div class="nav">
         <ul>
           <li>
             <a href="index.html">
               <img
+                class="logo"
                 src="images/logo.png"
                 alt="logo"
                 title="Michy's Photography Logo"
@@ -60,8 +68,8 @@
       </div>
     </header>
     <h1>Contact Michy</h1>
-    <p>Let me know what you think or if you have any questions :))</p>
-    <form action="" method="post">
+    <p id="let">Let me know what you think or if you have any questions :))</p>
+    <form action="mailto:michsalomon17@gmail.com" method="post">
       <fieldset>
         <legend>Your Information:</legend>
         <div>
