--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Proza+Libre|Open+Sans"
     />
+    <link rel="stylesheet" type="text/css" href="styles/fundementals.css" />
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
 
     <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -42,6 +43,7 @@
           <li>
             <a href="index.html">
               <img
+                class="logo"
                 src="images/logo.png"
                 alt="logo"
                 title="Michy's Photography Logo"
