--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="stylesheet" type="text/css" href="styles/fundementals.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Proza+Libre|Open+Sans"
+    />
     <link rel="stylesheet" type="text/css" href="styles/gallery.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -31,7 +37,7 @@
   </head>
   <body>
     <header>
-      <div>
+      <div class="nav">
         <ul>
           <li>
             <a href="index.html">
