resized all pictures

--- a/DIY-photo-shoots.html
+++ b/DIY-photo-shoots.html
@@ -66,6 +66,42 @@
         </ul>
       </div>
     </header>
+    <h1>DIY Photo Shoots</h1>
+    <p>
+      There are many ways to get creative at home. You don't need fancy studios
+      or expensive props to make amazing photographs! Here, I'll walk you
+      through some of my recent home shoots, and detail ideas for future shots.
+    </p>
+    <p>
+      Firstly, for this photo, <i>Serenity</i>, [bath.png] my friend and I went
+      to a craft shop, bought plastic plants, and filled a bath tub with things
+      we found in the house! We threw in a little Epson salt to give it that
+      blue color and photographed the tub as the color spread.
+    </p>
+    <!-- insert image  -->
+    <p>
+      Next, these pictures were made experimenting with long exposures. An easy
+      way to begin is by setting your camera to shutter priority. Play around
+      with the light with lamps, flashlights, cell phones, and even TV screens.
+      Turn the lights on and off. See what happens! Then experiment staying
+      still, walking around, only moving a hand or the head. Move objects
+      around, zoom in and out. Mix and match to watch magic happen.
+      <!-- insert image  -->
+    </p>
+    <p>
+      This picture was accomplished by jumping in the pool! Sometimes you just
+      have to go for it and see what happens. Think about your makeup! Here,
+      mine was colorful yest simple, but imagine the potential of color on the
+      face and how it can reacts with the water. (Send me what you come up
+      with!)
+    </p>
+    <!-- insert image  -->
+    <p>
+      Walking around your life, I challenge you to focus on sidewalks and
+      reflections. If the placement of the world feels poetic, snap a photo. Go
+      out after a rainy day. That's how I got this reflection! You can also
+      bring reflective surfaces outside and see how it reacts to the sun.
+    </p>
     <footer>
       <a href="sitemap.html">Browse the site</a>
       <p>
