--- a/about-me.html
+++ b/about-me.html
@@ -69,7 +69,7 @@
     </header>
     <h1>All About Michy</h1>
     <img
-    src="images/about-me.jpeg"
+    src="images/about-me (1).jpg"
     alt="Michy with cute sunglasses"
     title="Picture of Michy"
     width="200"
