--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
       </div>
     </header>
     <div>
-      <h2><a href="DIY-photo-shoots.html">Browse the Gallery</a></h2>
+      <h2><a href="photo-gallery.html">Browse the Gallery</a></h2>
       <a href="photo-gallery.html">
         <img
-          src="images/lips.png"
+          src="images/lips.jpg"
           alt="Lips Blowing Smoke"
           title="Breathe"
           width="300"
@@ -104,7 +104,7 @@
       <h2><a href="about-me.html">Get to know Michy</a></h2>
       <a href="about-me.html">
         <img
-          src="images/about-me.jpeg"
+          src="images/about-me (1).jpg"
           alt="Michy with cute sunglasses"
           title="Picture of Michy"
           width="300"
