--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -70,42 +70,42 @@
     <h1>The Gallery</h1>
     <div class="row">
       <div class="column">
-        <img src="images/bath.png" alt="Bathtub" title="Serenity" />
-        <img src="images/motor.png" alt="Motorcycle" title="Motor" />
+        <img src="images/bath.jpg" alt="Bathtub" title="Serenity" />
+        <img src="images/motor.jpg" alt="Motorcycle" title="Motor" />
         <img
           src="images/montse-water.jpg"
           alt="Woman in water"
           title="Water Woman"
         />
-        <img src="images/pau2.png" alt="Woman in smoke" title="Surrounded" />
+        <img src="images/pau2.jpg" alt="Woman in smoke" title="Surrounded" />
         <img
-          src="images/tunnelvision.png"
+          src="images/tunnelvision.jpg"
           alt="Construction"
           title="Tunnel Vision"
         />
         <img src="images/koala.jpg" alt="koala on a tree" title="Aussie" />
       </div>
       <div class="column">
-        <img src="images/flowers.png" alt="Flowers" title="Flowers" />
-        <img src="images/lips.png" alt="Lips with smoke" title="Breathe" />
+        <img src="images/flowers.jpg" alt="Flowers" title="Flowers" />
+        <img src="images/lips.jpg" alt="Lips with smoke" title="Breathe" />
         <img
-          src="images/bikepic.png"
+          src="images/bikepic.jpg"
           alt="Woman on Bicycle"
           title="Blurry Ride"
         />
-        <img src="images/sink.png" alt="water on a sink" title="Drops" />
+        <img src="images/sink.jpg" alt="water on a sink" title="Drops" />
       </div>
       <div class="column">
-        <img src="images/me2.png" alt="Me with long exposure" title="Ghost" />
-        <img src="images/me3.png" alt="Me in darkness" title="Pose" />
-        <img src="images/pau.png" alt="Woman long exposure" title="Blue" />
+        <img src="images/me2.jpg" alt="Me with long exposure" title="Ghost" />
+        <img src="images/me3.jpg" alt="Me in darkness" title="Pose" />
+        <img src="images/pau.jpg" alt="Woman long exposure" title="Blue" />
         <img
-          src="images/window.png"
+          src="images/window.jpg"
           alt="Window with long exposure"
           title="Window Pane"
         />
         <img
-          src="images/tree.png"
+          src="images/tree.jpg"
           alt="Reflection of trees"
           title="Reflection"
         />
