--- a/sitemap.html
+++ b/sitemap.html
@@ -33,6 +33,31 @@
 
       gtag("config", "UA-54516992-1");
     </script>
+    <style>
+      p {
+        font-size: 16px;
+      }
+      footer a {
+        font-size: 16px;
+      }
+      table {
+        text-align: left;
+        width: 50%;
+      }
+      caption {
+        font-size: 34px;
+        text-align: left;
+      }
+      th {
+        font-size: 21px;
+      }
+      td {
+        font-size: 16px;
+      }
+      td:hover {
+        background-color: #a786df;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -106,6 +131,10 @@
           title="logo"
           width="100"
       /></a>
+      <p>
+        All intellectual property at this website is in the public domain or is
+        the property of the site-owner."I, <your name>, pledge my honor that I have neither received nor provided unauthorized assistance during the completion of this work. I have read the term project instructions and observed all the restrictions and limitations specified therein."
+      </p>
     </footer>
   </body>
 </html>
