--- a/sitemap.html
+++ b/sitemap.html
@@ -42,17 +42,23 @@
       }
       table {
         text-align: left;
-        width: 50%;
+        width: 30%;
+        margin-left: 2%;
+        border-top: solid#0e172c;
+        background-color: #fffffe;
       }
       caption {
         font-size: 34px;
         text-align: left;
+        margin-bottom: 8px;;
       }
       th {
         font-size: 21px;
+        padding-bottom: 8px;
       }
       td {
         font-size: 16px;
+        padding-bottom: 5px;
       }
       td:hover {
         background-color: #a786df;
@@ -93,7 +99,7 @@
     </header>
     <table>
       <caption>
-        Michy's Photo's Site Map
+       <h1>Michy's Photo's Site Map</h1>
       </caption>
       <tr>
         <th>About Michy</th>
@@ -133,7 +139,11 @@
       /></a>
       <p>
         All intellectual property at this website is in the public domain or is
-        the property of the site-owner."I, <your name>, pledge my honor that I have neither received nor provided unauthorized assistance during the completion of this work. I have read the term project instructions and observed all the restrictions and limitations specified therein."
+        the property of the site-owner."I, Michelle Salomon Simon, pledge my
+        honor that I have neither received nor provided unauthorized assistance
+        during the completion of this work. I have read the term project
+        instructions and observed all the restrictions and limitations specified
+        therein."
       </p>
     </footer>
   </body>
