added js to gallery, added images and css

--- a/editing.html
+++ b/editing.html
@@ -34,6 +34,17 @@
 
       gtag("config", "UA-54516992-1");
     </script>
+    <style>
+      body {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      p{
+        margin-right: 300px;
+        margin-left: 300px;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -67,6 +78,21 @@
         </ul>
       </div>
     </header>
+    <h1>Editing Your Photos: A Preview</h1>
+    <p>
+      I provided a clip of my editing process for this photograph. It is a
+      simple demonstration on how to use the basic elements of Lightroom
+      Classic. If you want a deeper dive into editing, let me know, and I'll
+      upload more content!
+    </p>
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/cy3FFzDEPGw"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
     <footer>
       <a href="sitemap.html">Browse the site</a>
       <p>
