--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -34,6 +34,34 @@
 
       gtag("config", "UA-54516992-1");
     </script>
+    <style>
+      .row {
+        margin-left: 300px;
+        margin-right: 300px;
+      }
+      h1 {
+        text-align: center;
+      }
+      button {
+        border: none;
+        outline: none;
+        padding: 10px 16px;
+        background-color: #fffffe;
+        cursor: pointer;
+        font-size: 18px;
+      }
+      .btn:hover {
+        background-color: #a786df;
+      }
+
+      .btn:focus {
+        background-color: #a786df;
+        color: white;
+      }
+      #button {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -68,48 +96,140 @@
       </div>
     </header>
     <h1>The Gallery</h1>
+    <div id="button">
+      <button class="btn" id="btn-1">1</button>
+      <button class="btn" id="btn-2">2</button>
+      <button class="btn" id="btn-3">3</button>
+    </div>
     <div class="row">
       <div class="column">
-        <img src="images/bath.jpg" alt="Bathtub" title="Serenity" />
-        <img src="images/motor.jpg" alt="Motorcycle" title="Motor" />
+        <img
+          src="images/bath.jpg"
+          alt="Bathtub"
+          title="Serenity"
+          style="width: 100%"
+        />
+        <img
+          src="images/motor.jpg"
+          alt="Motorcycle"
+          title="Motor"
+          style="width: 100%"
+        />
         <img
           src="images/montse-water.jpg"
           alt="Woman in water"
           title="Water Woman"
+          style="width: 100%"
         />
-        <img src="images/pau2.jpg" alt="Woman in smoke" title="Surrounded" />
+        <img
+          src="images/pau2.jpg"
+          alt="Woman in smoke"
+          title="Surrounded"
+          style="width: 100%"
+        />
         <img
           src="images/tunnelvision.jpg"
           alt="Construction"
           title="Tunnel Vision"
+          style="width: 100%"
         />
-        <img src="images/koala.jpg" alt="koala on a tree" title="Aussie" />
       </div>
       <div class="column">
-        <img src="images/flowers.jpg" alt="Flowers" title="Flowers" />
-        <img src="images/lips.jpg" alt="Lips with smoke" title="Breathe" />
+        <img
+          src="images/koala.jpg"
+          alt="koala on a tree"
+          title="Aussie"
+          style="width: 100%"
+        />
+        <img
+          src="images/flowers.jpg"
+          alt="Flowers"
+          title="Flowers"
+          style="width: 100%"
+        />
+        <img
+          src="images/lips.jpg"
+          alt="Lips with smoke"
+          title="Breathe"
+          style="width: 100%"
+        />
         <img
           src="images/bikepic.jpg"
           alt="Woman on Bicycle"
           title="Blurry Ride"
+          style="width: 100%"
         />
-        <img src="images/sink.jpg" alt="water on a sink" title="Drops" />
+        <img
+          src="images/sink.jpg"
+          alt="water on a sink"
+          title="Drops"
+          style="width: 100%"
+        />
       </div>
       <div class="column">
-        <img src="images/me2.jpg" alt="Me with long exposure" title="Ghost" />
-        <img src="images/me3.jpg" alt="Me in darkness" title="Pose" />
-        <img src="images/pau.jpg" alt="Woman long exposure" title="Blue" />
+        <img
+          src="images/bright.jpg"
+          alt="bright light on woman"
+          title="royal light"
+          style="width: 100%"
+        />
+        <img
+          src="images/me4.jpg"
+          alt="Me with silks"
+          title="Silks"
+          style="width: 100%"
+        />
+
+        <img
+          src="images/me2.jpg"
+          alt="Me with long exposure"
+          title="Ghost"
+          style="width: 100%"
+        />
+        <img
+          src="images/me3.jpg"
+          alt="Me in darkness"
+          title="Pose"
+          style="width: 100%"
+        />
+        <img
+          src="images/pau.jpg"
+          alt="Woman long exposure"
+          title="Blue"
+          style="width: 100%"
+        />
+      </div>
+      <div class="column">
         <img
           src="images/window.jpg"
           alt="Window with long exposure"
           title="Window Pane"
+          style="width: 100%"
         />
         <img
           src="images/tree.jpg"
           alt="Reflection of trees"
           title="Reflection"
+          style="width: 100%"
         />
-        <img src="images/mask.jpg" alt="Woman with mask" title="Royal" />
+        <img
+          src="images/mask.jpg"
+          alt="Woman with mask"
+          title="Royal"
+          style="width: 100%"
+        />
+        <img
+          src="images/caroedit.jpg"
+          alt="Limbs"
+          title="Limbs"
+          style="width: 100%"
+        />
+        <img
+          src="images/montse.jpg"
+          alt="hazy woman"
+          title="hazy"
+          style="width: 100%"
+        />
       </div>
     </div>
     <footer>
@@ -128,5 +248,32 @@
           width="100"
       /></a>
     </footer>
+
+    <script>
+      const elements = document.getElementsByClassName("column");
+
+      function one() {
+        console.log("works");
+        for (i = 0; i < elements.length; i++) {
+          elements[i].style.flex = "100%";
+        }
+      }
+      document.getElementById("btn-1").onclick = one;
+
+      function two() {
+        console.log("works");
+        for (i = 0; i < elements.length; i++) {
+          elements[i].style.flex = "40%";
+        }
+      }
+      document.getElementById("btn-2").onclick = two;
+
+      function four() {
+        for (i = 0; i < elements.length; i++) {
+          elements[i].style.flex = "24%";
+        }
+      }
+      document.getElementById("btn-3").onclick = four;
+    </script>
   </body>
 </html>
