--- a/about-me.html
+++ b/about-me.html
@@ -33,7 +33,26 @@
 
      gtag("config", "UA-54516992-1");
    </script>
-
+<style>
+  h1{
+    text-align: center;
+  }
+  #mich{
+    text-align: center;
+  }
+  p{
+    text-indent: 50px;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+  h2{
+    text-indent: 50px;
+    font-family: "Open Sans";
+    text-decoration: underline;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+</style>
   </head>
   <body>
     <header>
@@ -68,12 +87,14 @@
       </div>
     </header>
     <h1>All About Michy</h1>
+    <div id="mich">
     <img
     src="images/about-me (1).jpg"
     alt="Michy with cute sunglasses"
     title="Picture of Michy"
-    width="200"
+    width="250"
     /></a>
+    </div>
     <h2>Experience</h2>
     <p>
       Growing up, I have always been memorized by photography. My mother is a
