--- a/index.html
+++ b/index.html
@@ -68,48 +68,72 @@
         </ul>
       </div>
     </header>
-    <div>
-      <h2><a href="photo-gallery.html">Browse the Gallery</a></h2>
-      <a href="photo-gallery.html">
-        <img
-          src="images/lips.jpg"
-          alt="Lips Blowing Smoke"
-          title="Breathe"
-          width="300"
-      /></a>
+    <!-- welcome message -->
+    <div class="slideshow-container">
+      <div class="mySlides fade">
+        <div class="numbertext">1/4</div>
+        <div>
+          <img
+            src="images/lips.jpg"
+            alt="Lips Blowing Smoke"
+            title="Breathe"
+            style="width: 100%"
+          />
+        </div>
+        <div class="text">Browse the Gallery</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">2/4</div>
+        <div>
+          <img
+            src="images/montse-water.jpg"
+            alt="Girl in Water"
+            title="Girl in Water"
+            style="width: 100%"
+          />
+        </div>
+        <div class="text">How to achieve this look at home</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">3/4</div>
+        <div>
+          <img
+            src="images/edit-pic.jpeg"
+            alt="Picture showing picture in editing"
+            title="Picture of editing"
+            style="width: 100%"
+          />
+        </div>
+        <div class="text">Get Professional look through edits</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">4/4</div>
+        <div>
+          <img
+            src="images/about-me (1).jpg"
+            alt="Michy with cute sunglasses"
+            title="Picture of Michy"
+            style="width: 100%"
+          />
+        </div>
+        <div class="text">Get to know Michy</div>
+      </div>
+      <div>
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <br />
+      <div style="text-align: center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+      </div>
     </div>
-    <div>
-      <h2>
-        <a href="DIY-photo-shoots.html">How to achieve this look at home</a>
-      </h2>
-      <a href="DIY-photo-shoots.html">
-        <img
-          src="images/montse-water.jpg"
-          alt="Girl in Water"
-          title="Girl in Water"
-          width="300"
-      /></a>
-    </div>
-    <div>
-      <h2><a href="editing.html">Get Professional look through edits</a></h2>
-      <a href="editing.html">
-        <img
-          src="images/edit-pic.jpeg"
-          alt="Picture showing picture in editing"
-          title="Picture of editing"
-          width="300"
-      /></a>
-    </div>
-    <div>
-      <h2><a href="about-me.html">Get to know Michy</a></h2>
-      <a href="about-me.html">
-        <img
-          src="images/about-me (1).jpg"
-          alt="Michy with cute sunglasses"
-          title="Picture of Michy"
-          width="300"
-      /></a>
-    </div>
+
     <footer>
       <a href="sitemap.html">Browse the site</a>
       <p>
@@ -125,5 +149,36 @@
           width="100"
       /></a>
     </footer>
+
+    <script>
+      let slideIndex=1;
+      showSlides(slideIndex);
+
+      function plusSlides(n){
+        showSlides(slideIndex +=n);
+        console.log("works")
+      }
+      document.getElementsByClassName("next").onclick=plusSlides
+
+
+      function currentSlide(n) {
+      showSlides(slideIndex = n);
+      }
+      function showSlides(n) {
+        const i;
+        const slides = document.getElementsByClassName("mySlides");
+        const dots = document.getElementsByClassName("dot");
+        if (n > slides.length) {slideIndex = 1}
+        if (n < 1) {slideIndex = slides.length}
+        for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+        }
+        for (i = 0; i < dots.length; i++) {
+            dots[i].className = dots[i].className.replace(" active", "");
+        }
+        slides[slideIndex-1].style.display = "block";
+        dots[slideIndex-1].className += " active";
+      }
+    </script>
   </body>
 </html>
