--- a/sitemap.html
+++ b/sitemap.html
@@ -55,6 +55,7 @@
       th {
         font-size: 21px;
         padding-bottom: 8px;
+        font-family: "Open Sans"
       }
       td {
         font-size: 16px;
