--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -270,10 +270,17 @@
 
       function four() {
         for (i = 0; i < elements.length; i++) {
-          elements[i].style.flex = "24%";
+          elements[i].style.flex = "23%";
         }
       }
       document.getElementById("btn-3").onclick = four;
+
+      function style() {
+        let gallery = document.querySelector("h1");
+        gallery.style.color = "#a786df";
+        gallery.style.textShadow = "2px 2px #fffffe";
+      }
+      document.querySelector("h1").onmouseover = style;
     </script>
   </body>
 </html>
