--- a/DIY-photo-shoots.html
+++ b/DIY-photo-shoots.html
@@ -65,6 +65,9 @@
       .white{
         border:solid #fffffe 2px;
       }
+      #bor{
+        border:none;
+      }
     </style>
   </head>
   <body>
@@ -208,6 +211,7 @@
           alt="instagram logo link"
           title="logo"
           width="100"
+          id="bor"
       /></a>
     </div>
     </footer>
