--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </ul>
       </div>
     </header>
-    <div>
+    <div id="white">
       <h1>Well, Hello There</h1>
       <p>
         I'm Michy. Take a look at how I see life from an alternate perspective.
@@ -142,7 +142,7 @@
 
     <footer>
       <a href="sitemap.html">Browse the site</a>
-      <p>
+      <p id="color">
         Any questions? Comments?
         <a href="contact.html">Get in touch with Michy</a>
       </p>
