added sitemap to nav

--- a/DIY-photo-shoots.html
+++ b/DIY-photo-shoots.html
@@ -99,6 +99,9 @@
           <li>
             <a href="contact.html">Contact Michy</a>
           </li>
+          <li>
+            <a href="sitemap.html">Browse the site</a>
+          </li>
         </ul>
       </div>
     </header>
