--- a/editing.html
+++ b/editing.html
@@ -40,7 +40,7 @@
         margin-left: auto;
         margin-right: auto;
       }
-      p{
+      p {
         margin-right: 300px;
         margin-left: 300px;
       }
@@ -74,6 +74,9 @@
           </li>
           <li>
             <a href="contact.html">Contact Michy</a>
+          </li>
+          <li>
+            <a href="sitemap.html">Browse the site</a>
           </li>
         </ul>
       </div>
