--- a/sitemap.html
+++ b/sitemap.html
@@ -50,12 +50,12 @@
       caption {
         font-size: 34px;
         text-align: left;
-        margin-bottom: 8px;;
+        margin-bottom: 8px;
       }
       th {
         font-size: 21px;
         padding-bottom: 8px;
-        font-family: "Open Sans"
+        font-family: "Open Sans";
       }
       td {
         font-size: 16px;
@@ -95,12 +95,15 @@
           <li>
             <a href="contact.html">Contact Michy</a>
           </li>
+          <li>
+            <a href="sitemap.html">Browse the site</a>
+          </li>
         </ul>
       </div>
     </header>
     <table>
       <caption>
-       <h1>Michy's Photo's Site Map</h1>
+        <h1>Michy's Photo's Site Map</h1>
       </caption>
       <tr>
         <th>About Michy</th>
